0.5.0

* First version in git
* Totally new GUI
* Facebook/Twitter integration

0.5.1

* UI performance enhancements & fixes
* Incremental library loading
* Eager detection of NAT Traversal

0.5.2

* Various non-functional fixes

0.5.3

* Refactoring of metadata classes to allow plugins to provide their own metadata services
* Midas metadata now loads asynchronously and much faster
* Filtering/sorting tracklists now lightning fast thanks to GlazedLists
* 'Add friends' functionality
* Can now right-click on shared tracks and show in finder/explorer
* Pre-downloads next track on tracklist when approaching end of playing track

0.5.4

* Several fixes for reconnecting to nodes in poor network conditions
* iTunes playlists now show up in sidebar straight away

(dev)

* Shared playlists now load ok in friend tree
* Libraries now load correctly if no friend playlists