@@ -170,6 +170,11 @@ public class PlaylistTableModel extends GlazedTrackListTableModel implements Fou
 	}
 
 	@Override
+	public String deleteTracksDesc() {
+		return "Remove tracks from playlist";
+	}
+	
+	@Override
 	public void deleteTracks(List<String> streamIds) {
 		if (!myPlaylist)
 			throw new Errot();
