@@ -55,6 +55,11 @@ public class SearchResultTableModel extends GlazedTrackListTableModel implements
 	}
 
 	@Override
+	public String deleteTracksDesc() {
+		return null;
+	}
+	
+	@Override
 	public void deleteTracks(List<String> streamIds) {
 		throw new Errot();
 	}
