@@ -32,3 +32,4 @@
 
 * Shared playlists now load ok in friend tree
 * Libraries now load correctly if no friend playlists
+* Delete tracks UI elements better-described
